--- a/pnstyle/style.css
+++ b/pnstyle/style.css
@@ -1,27 +1,4 @@
-.bannersclientlogincontainer
-{
-	width:50%; 
-	padding:10px; 
-	border: 1px dashed #ccc;
-	margin-left:25%;
+.inv_link {
+  cursor: pointer;
 }
 
-form.bannersclientlogin {
-	padding: 1em 0;
-	margin: 0 1em
-}
-
-.bannerloginformrow {
-	padding: .25em
-}
-div.bannerloginformrow label {
-	float: left;
-	width: 150px;
-	text-align: right;
-	padding-right: 5px;
-}
-
-div.bannerloginformrow input {
-	margin-left:20px;
-	text-align:left;
-}
