Migrating "pnmodurl" to "modurl".

--- a/modules/Invitation/templates/block/latest.htm
+++ b/modules/Invitation/templates/block/latest.htm
@@ -5,4 +5,4 @@
 
 <br /><!--[gt text="Thank you for inviting your friends!"]--><br />
 
-<a href="<!--[pnmodurl modname="Invitation"]-->"><!--[gt text="Invite friends now!"]--></a>
+<a href="{modurl modname='Invitation' type='user' func='main' fqurl=true}"><!--[gt text="Invite friends now!"]--></a>
